# fhdsajlfjlflhf12i3pupi21u32pids

./: ROADMAP.md
chat/: CONTRIBUTING.md  INSTALL.md  README.md  README_ko.md  SECURITY.md  build-all.sh  build-py-grpc.sh  docker-build.sh  docker-release.sh  go.mod  sunrise.err
chat/chatbot/: README.md
chat/docker/: README.md
chat/docs/: API.md  CLA.md  call-establishment.md  drafty.md  faq.md  monitoring.md  thecard.md  translations.md
chat/keygen/: README.md  keygen.go
chat/loadtest/: README.md  loadtest.scala  sunrise.erl  sunrise.scala  tsung.xml
chat/monitoring/: README.md
chat/pbx/: README.md  model.pb.go  model.proto  model_grpc.pb.go  py-generate.sh  py_fix.py
chat/py_grpc/: .gitignore  README.md  pyproject.toml  version.py
chat/py_grpc/sunrise_grpc/: model_pb2.py  model_pb2_grpc.py
chat/rest-auth/: auth.py
chat/server/: api_key.go  calls.go  cluster.go  cluster_leader.go  datamodel.go  hdl_files.go  hdl_grpc.go  hdl_livekit.go  hdl_livekit_test.go  hdl_longpoll.go  hdl_websock.go  http.go  http_pprof.go  hub.go  init_topic.go  main.go  pbconverter.go  plugins.go  (+15 more)
deploy/: .env.example  Caddyfile  Makefile  README.md  docker-compose.yml  register-rp.sh
docs/: CALLS.md  MESSENGER_CLIENT.md  SSO_INTEGRATION.md  STORIES_AND_BOTS.md
flutter_app/: .gitignore  README.md  pubspec.yaml
sso/: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md
webapp/: README.md  index.html  package-lock.json  package.json  push.md  service-worker.js  webpack.config.js
webapp-svelte/: .env.example  index.html  package.json  vite.config.js
(+653 files in other folders)
